Add box and better style

--- a/style/style.css
+++ b/style/style.css
@@ -10,16 +10,36 @@ body {
 }
 
 #title {
-    font-size: 50px;
+    font-size: 100px;
     color: rgb(255, 251, 0);
-    text-align: center;
     font-weight: bold;
+    padding: auto;
+    text-align: center;
+    margin: auto;
+    height: auto;
+    width: 1000 px;
+    margin-bottom: 100px;
+    
+    
 }
 
 .prato {
     font-size: 30px;
-    color: rgb(99, 99, 1, 5);
+    color: gold;
     font-weight: bold;
     text-align: center;
+    padding: auto;
+    padding-bottom: 10px;
+    height: auto;
+    width: 300px;
+    margin: auto;
+    margin-bottom: 100px;
 }
+
+button {
+  font-size: 30px;
+  border: solid gold;
+  
+}
+
 
